testing/fail_src/false_tree.stderr
error[E0277]: the trait bound `std::io::Error: AsErrTree` is not satisfied
  --> ../testing/fail_src/false_tree.rs:20:5
   |
20 |     #[tree_err]
   |     ^ the trait `AsErrTree` is not implemented for `std::io::Error`, which is required by `&std::io::Error: AsErrTree`
   |
   = help: the following other types implement trait `AsErrTree`:
             &T
             (dyn std::error::Error + 'static)
             ErrStruct
   = note: required for `&std::io::Error` to implement `AsErrTree`
   = note: required for the cast from `&&std::io::Error` to `&dyn AsErrTree`
